overflow banner fix

--- a/main.css
+++ b/main.css
@@ -128,7 +128,7 @@
     width: 100%;
     height: 70vh;
     color: white;
-    overflow: hide;
+    overflow-y: hidden;
 }
 
 .banner h1,
@@ -153,31 +153,38 @@ span {
     margin: 0 auto;
 }
 
-@media only screen and (min-width: 0px) {
+@media only screen and (max-width: 330px) {
     .banner img {
+        display: none;
+    }
+}
+
+@media only screen and (min-width: 330px) {
+    .banner img {
+
         margin-top: 2rem;
-        width: 80%;
+        width: 30%;
     }
 }
 
 @media only screen and (min-width: 452px) {
     .banner img {
         margin-top: 2rem;
-        width: 60%;
+        width: 25%;
     }
 }
 
 @media only screen and (min-width: 768px) {
     .banner img {
-        margin-top: 1rem;
-        width: 50%;
+        margin-top: 0rem;
+        width: 33%;
     }
 }
 
 @media only screen and (min-width: 992px) {
     .banner img {
-        margin-top: 1rem;
-        width: 40%;
+        margin-top: 0rem;
+        width: 25%;
     }
 }
 
